--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/icons" lang="edit">
         <file alias="address-book">res/icons/address-book.png</file>
         <file alias="bitcoin">res/icons/bitcoin.png</file>
+        <file alias="weeds">res/icons/weedlogo256.png</file> 
         <file alias="quit">res/icons/quit.png</file>
         <file alias="send">res/icons/send.png</file>
         <file alias="toolbar">res/icons/toolbar.png</file>
